remove rand_compat

--- a/rebar.config
+++ b/rebar.config
@@ -9,8 +9,7 @@
 
     {eredis, {git, "git://github.com/wooga/eredis.git", {tag, "master"}}},
     {types, {git, "https://github.com/lasp-lang/types", {tag, "master"}}},
-    {time_compat, {git, "https://github.com/lasp-lang/time_compat", {tag, "0.0.2"}}},
-    {rand_compat, {git, "https://github.com/lasp-lang/rand_compat", {tag, "master"}}}
+    {time_compat, {git, "https://github.com/lasp-lang/time_compat", {tag, "0.0.2"}}}
 ]}.
 
 {erl_opts, [debug_info,
